--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-request.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="http-util.html">
 <link rel="import" href="tv4/tv4.html">
 <script>
