--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="../akreet-http-util/http-util.html">
-<link rel="import" href="../tv4/tv4.html">
+<link rel="import" href="tv4.html">
 <script>
     akreet = window.akreet || {};
     akreet.BaseActionBehavior = {
