--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -340,7 +340,7 @@
                         if (request.response.status === 'ok') {
                             callback(request.response.importAssetId);
                         } else {
-                            this.handleErrorResponse(request.response.response);
+                            this.handleErrorResponse(request.response);
                         }
                     }.bind(this)
             ).catch(
