--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -536,7 +536,7 @@
 
             // convert to maps
             var _overridePropertiesMap = _toObject(this._overrideProperties);
-            var overridePropertiesMap = _toObject(this.overrideProperties);
+            var overridePropertiesMap = _toObject(overrideProperties);
 
             // combine the maps
             Object.keys(overridePropertiesMap).map(function(key) {
