--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -507,8 +507,8 @@
                         handleAs: 'json'
                     }
             ).then(
-                    function (response) {
-                        callback(response.overrideProperties);
+                    function (request) {
+                        callback(request.response.overrideProperties);
                     }
             ).catch(
                     function(exception) {
