--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -4,6 +4,16 @@
 <link rel="import" href="tv4.html">
 <script>
     akreet = window.akreet || {};
+    akreet.OverrideProperties = akreet.OverrideProperties || {};
+    akreet.OverridePropertiesBehavior = {
+        overrideProperty: function(key) {
+            if(akreet.OverrideProperties[key]) {
+                return akreet.OverrideProperties[key];
+            }
+            return null;
+        }
+    }
+
     akreet.BaseActionBehavior = {
 
         properties: {
@@ -141,7 +151,8 @@
                 type: Array,
                 value: function() {
                     return [];
-                }
+                },
+                observer: "_onOverridePropertiesChange"
             }
         },
 
@@ -545,6 +556,12 @@
             });
 
             this._overrideProperties = newOverrideProperties;
+        },
+
+        _onOverridePropertiesChange: function() {
+            if(this._overrideProperties) {
+                window['AKREET_OVERRIDE_PROPERTIES'] = this._overrideProperties;
+            }
         },
 
         /**
