--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -4,6 +4,8 @@
 <link rel="import" href="tv4.html">
 <script>
     akreet = window.akreet || {};
+    akreet.OverrideProperties = akreet.OverrideProperties || {}
+
     akreet.OverridePropertiesBehavior = {
         overrideProperty: function(key) {
             if(akreet.OverrideProperties[key]) {
@@ -559,7 +561,7 @@
 
         _onOverridePropertiesChange: function() {
             if(this._overrideProperties) {
-                window['AKREET_OVERRIDE_PROPERTIES'] = this._overrideProperties;
+                akreet.OverrideProperties = this._overrideProperties;
             }
         },
 
