--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -1,10 +1,35 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="../akreet-http-util/http-util.html">
+<link rel="import" href="lodash.html">
 <link rel="import" href="tv4.html">
 <script>
     akreet = window.akreet || {};
 
+    // =================================================================================================================
+    // OverridePropertiesManager
+    //   Wraps and provides helper functions to manage the override properties.
+    // =================================================================================================================
+    var OverridePropertiesManager = function(overrideProperties) {
+        this.overrideProperties = overrideProperties;
+    };
+
+    OverridePropertiesManager.prototype.asBoolean = function(name) {
+        var property = _.find(this.overrideProperties, {key: name});
+        if(property) {
+            var value = property.value;
+            return Boolean(value);
+        }
+        return false;
+    };
+
+    akreet.OverridePropertiesManager = OverridePropertiesManager;
+
+    // =================================================================================================================
+    // BaseActionBehavior
+    //   The main behavior that all all applications must extends to be able to send data back and forth between
+    //   the extending application the core Akreet application.
+    // =================================================================================================================
     akreet.BaseActionBehavior = {
 
         properties: {
@@ -157,13 +182,10 @@
         },
 
         _computeOverrideProperties: function(changes) {
-            var map = {};
             if(changes.base && changes.base.length) {
-                changes.base.forEach(function(entry) {
-                    map[entry.key] = entry.value;
-                });
+                return new akreet.OverridePropertiesManager(changes.base);
             }
-            return map;
+            return new akreet.OverridePropertiesManager([]);
         },
 
         /**
