--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -14,7 +14,7 @@
 
         asBoolean: function(overrideProperties, name) {
             if(overrideProperties && overrideProperties[name]) {
-                return Boolean(overrideProperties[name].value);
+                return Boolean(overrideProperties[name]);
             }
             return false;
         },
