--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -6,6 +6,20 @@
     akreet = window.akreet || {};
 
     // =================================================================================================================
+    // ActionHelperBehavior
+    //   Some random useful functions for actions.
+    // =================================================================================================================
+    akreet.AcitonHelperBehavior = {
+
+        generateTitle: function() {
+            return "booyeah";
+        }
+
+
+    };
+
+
+    // =================================================================================================================
     // OverridePropertiesBehavior
     //   Use this behavior to unleash the power of the OverridePropertiesManager in the Polymer custom elements.
     // =================================================================================================================
