--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -9,7 +9,7 @@
     // ActionHelperBehavior
     //   Some random useful functions for actions.
     // =================================================================================================================
-    akreet.AcitonHelperBehavior = {
+    akreet.ActionHelperBehavior = {
 
         generateTitle: function() {
             return "booyeah";
