--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -12,7 +12,7 @@
     akreet.ActionHelperBehavior = {
 
         generateTitle: function() {
-            var randomChars = "(" + Math.random().toString(36).substring(2,3) + ")";
+            var randomChars = "(" + (0|Math.random()*9e6).toString(36) + ")";
             if(this._schema) {
                 return this._schema.name + "." + randomChars;
             }
