--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -14,7 +14,7 @@
         generateTitle: function() {
             var randomChars = "(" + (0|Math.random()*9e6).toString(36) + ")";
             if(this._schema) {
-                return this._schema.name + "." + randomChars;
+                return this._schema.name + " " + randomChars;
             }
 
             return randomChars;
