--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -197,9 +197,7 @@
              */
             _overrideProperties: {
                 type: Array,
-                value: function() {
-                    return [];
-                }
+                value: null
             },
 
             /**
