--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -598,32 +598,7 @@
         },
 
         _onLoadOverrideProperties: function(overrideProperties) {
-            function _toObject(array) {
-                var _obj = [];
-                if(array && array.length) {
-                    array.forEach(function(entry) {
-                        _obj[entry.key] = entry.value;
-                    });
-                }
-                return _obj;
-            }
-
-            // convert to maps
-            var _overridePropertiesMap = _toObject(this._overrideProperties);
-            var overridePropertiesMap = _toObject(overrideProperties);
-
-            // combine the maps
-            Object.keys(overridePropertiesMap).map(function(key) {
-                _overridePropertiesMap[key] = overridePropertiesMap[key];
-            });
-
-            // back to key value entries
-            var newOverrideProperties = [];
-            Object.keys(_overridePropertiesMap).map(function(key) {
-                newOverrideProperties.push({ key: key, value: _overridePropertiesMap[key] });
-            });
-
-            this._overrideProperties = newOverrideProperties;
+            this._overrideProperties = overrideProperties;
         },
 
         /**
