--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -301,10 +301,6 @@
                 throw 'expected to find parentDomain and actionId in url query params';
             }
 
-
-            // this will set the overrideProperties
-            //this.loadOverrideProperties(this.actionId, this._onLoadOverrideProperties.bind(this));
-
             // this set the schema and acceptsSchemas
             this._setSchema(function() {
 
@@ -599,6 +595,9 @@
 
         _onLoadOverrideProperties: function(overrideProperties) {
             this._overrideProperties = overrideProperties;
+            this.sendMessage({
+                type: 'akreet:override-properties-loaded'
+            });
         },
 
         /**
