latest base-action

--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -342,6 +342,8 @@
 
             }.bind(this));
 
+            // add unload listener
+            window.addEventListener('unload', this.detached.bind(this));
         },
 
         /**
@@ -350,11 +352,8 @@
          * @method detached
          */
         detached: function () {
-
-            // unbind from window
             window.removeEventListener('message', this.parentWindowEventListener);
             console.log('[detached] detached parentWindowEventListener');
-
         },
 
         /**
@@ -371,11 +370,9 @@
                     switch (true) {
                         case /^akreet:event-save$/i.test(type):
                             this.onEventSaveReceived(eventData.data);
-                            this.detached();
                             break;
                         case /^akreet:event-cancel$/i.test(type):
                             this.onEventCancelReceived(eventData.data);
-                            this.detached();
                             break;
                         case /^akreet:load-override-properties$/i.test(type):
                             this._onLoadOverrideProperties(eventData.data);
