--- a/akreet-base-action-behavior.html
+++ b/akreet-base-action-behavior.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="../akreet-http-util/http-util.html">
 <link rel="import" href="tv4.html">
+<link rel="import" href="lodash.html">
 <script>
     akreet = window.akreet || {};
 
